--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/luizguilhermegzg/work-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "fs": "0.0.1-security",
     "readline-sync": "^1.4.10"
   }
 }
